# Zertz3D

./: .coveragerc  .gitignore  .gitmodules  DIAGRAM_README.md  MIGRATION_IMPLEMENTATION_PLAN.md  README.md  RUST_WRAPPER_REVIEW.md  analyze_canonicalization.py  generate_coverage_report.sh  main.py  pyproject.toml  readme.md  render_notation.py  requirements.txt  rust-build.sh  rust-dev.sh  sample_replay.txt  todo.txt  tournament.py  visualize_board_coords.py  zertz_rules.md
cli/: __init__.py  cli.py
controller/: __init__.py  action_processor.py  action_text_formatter.py  action_text_renderer.py  game_logger.py  game_loop.py  game_session.py  human_player_interaction_manager.py  move_highlight_state_machine.py  replay_loader.py  zertz_game_controller.py
factory/: __init__.py  zertz_factory.py
game/: action_result.py  bad_games.txt  constants.py  player_config.py  render_data.py  rules.txt  stateless_logic.py  writers.py  zertz_board.py  zertz_game.py  zertz_logic.py  zertz_player.py  zertz_position.py
learner/: c6_conv_layer.py  cnn_feature_extractor.py  gnn_feature_extractor.py  hybrid_zertz_ai.py  test.py
models/: ball.blend  ball.blend1  ball_hi.bam  ball_lo.bam  skybox.bam  skybox.blend  torus.blend  torus.blend1  torus_hi.bam  torus_lo.bam
renderer/: composite_renderer.py  material_modifier.py  outline_manager.py  panda_renderer.py  text_renderer.py  water_node.py  zertz_models.py  zertz_renderer.py
scripts/: README.md  build_wheels.sh
shaders/: splut3Clipped.frag.glsl  splut3Clipped.sha  splut3Clipped.vert.glsl  water.frag.glsl  water.sha  water.vert.glsl
shared/: __init__.py  constants.py  interfaces.py  materials_modifiers.py  render_data.py
tests/: __init__.py  test_action_processor.py  test_action_result.py  test_action_scores.py  test_action_transform_helpers.py  test_action_transformations.py  test_backend_comparison.py  test_blitz_mode_parity.py  test_board_errors.py  test_both_lose_condition.py  test_canonicalization_gap_comprehensive.py  test_canonicalization_parity.py  test_capture_pool_slots.py  test_composite_renderer.py  test_crash_reproduction.py  test_game_controller.py  test_game_end_reasons.py  test_game_logger.py  test_game_session.py  test_geometric_ring_removal.py  test_hex_transforms.py  test_isolated_regions.py  test_isolation_notation_integration.py  test_loop_detection_comprehensive.py  test_marble_supply.py  test_mask_canonicalization.py  test_mcts_api_comparison.py  test_mcts_enhancements.py  test_mcts_player.py  test_notation.py  test_notation_formatter.py  test_notation_loader.py  test_notation_temporal_coupling.py  test_pass_and_loops.py  test_player_name_display.py  test_player_names_round_trip.py  test_position.py  test_rave.py  (+9 more)
(+108 files in other folders)
