[project]
name = "zertz3d"
version = "0.5.2"
description = "A 3D implementation of the abstract board game Zèrtz."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "e2cnn>=0.2.1",
    "numpy>=2.3.4",
    "panda3d>=1.10.15",
    "panda3d-simplepbr>=0.12.0",
    "torch>=2.8.0",
    "torch-geometric>=2.7.0",
    "matplotlib>=3.10.7",
    "sgfmill>=1.1.1",
    "pyyaml>=6.0.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
]
[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
zertz3d = "cli.cli:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "hiivelabs_zertz_mcts"
python-packages = ["cli", "controller", "factory", "game", "learner", "renderer", "shared", "scripts"]
include = ["models/**/*"]


[tool.pytest.ini_options]
markers = [
    "backend_comparison: marks tests that compare Python and Rust backend implementations",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
